<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bottom_navigation"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bottom_navigation_view" />
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/input_demo" />
        <item
            android:id="@+id/nav_behavior"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/behavior_demo" />
    </group>

    <item android:title="@string/sub_items">
        <menu>
            <item
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/sub_item_1" />
            <item
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/sub_item_2" />
        </menu>
    </item>

</menu>